Revert "Revert "Merge branch 'main' of https://github.com/transinh085/ShoeShop""
This reverts commit 0e4c1b3793437d8a71da3d0e803490b45cbf5a62.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -112,13 +112,13 @@
 										</ul>
 									</li>
 									<li>
-										<a href="products">Products</a>
+										<a asp-controller="Product" asp-action="Index">Products</a>
 									</li>
 									<li>
 										<a href="blog.html">Blog</a>
 									</li>
 									<li>
-										<a href="#0">Buy Template</a>
+										<a href="/admin">Buy Template</a>
 									</li>
 								</ul>
 							</div>
