--- a/wwwroot/admin/css/custom.css
+++ b/wwwroot/admin/css/custom.css
@@ -15,3 +15,71 @@
     border-color: #e04f1a;
     box-shadow: 0 0 0 0.25rem rgba(224, 79, 26, 0.25);
 }
+
+
+.upload-image-container {
+    min-height: 200px;
+    background-color: #f8f9fc;
+    border: .125rem dashed #d1d8ea;
+    border-radius: .5rem;
+    position: relative;
+    cursor: pointer;
+}
+
+.upload-image-container .no-image p{
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    font-size: 1rem;
+    font-style: italic;
+    font-weight: 700;
+    color: #343a40;
+}
+
+
+.upload-image-container:hover {
+    background-color: #fff;
+    border-color: #0665d0;
+}
+
+.upload-image-container:hover .no-image p{
+    color: #0665d0;
+}
+
+.has-image{
+    margin: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.preview-image-item {
+    position: relative;
+    width: 120px;
+    height: 120px;
+}
+
+.preview-image-item img{
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover ;
+    border-radius: 8px
+}
+
+.preview-image-item span {
+    position: absolute;
+    right: 4px;
+    top: 4px;
+    color: #fff;
+    font-size: 10px;
+    height:22px;
+    width: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(0 0 0 / 40%);
+    border-radius: 50%;
+}
