add dialog customer

--- a/Areas/Admin/Views/Customers/Index.cshtml
+++ b/Areas/Admin/Views/Customers/Index.cshtml
@@ -8,6 +8,8 @@
 
 @section Styles {
     <link rel="stylesheet" href="~/admin/js/plugins/sweetalert2/sweetalert2.min.css">
+    <link rel="stylesheet" href="~/admin/js/plugins/bootstrap-datepicker/css/bootstrap-datepicker3.min.css">
+    <link rel="stylesheet" href="~/admin/js/plugins/flatpickr/flatpickr.min.css">
 }
 
 <!-- Hero -->
@@ -27,17 +29,15 @@
     </div>
 </div>
 <!-- END Hero -->
-
-
-
 <div class="content">
     <div class="block block-rounded">
         <div class="block-header block-header-default">
             <h3 class="block-title">List Customer</h3>
             <div class="block-options">
-                <a class="btn btn-hero btn-primary" asp-action="Create">
-                    <i class="fa-regular fa-plus"></i> Add
-                </a>
+                <button type="button" class="btn btn-hero btn-primary me-2" data-bs-toggle="modal"
+                        data-bs-target="#modal-customer" id="btn-and">
+                    Add Customer
+                </button>
             </div>
         </div>
         <div class="block-content">
@@ -49,15 +49,19 @@
                         <th>Name</th>
                         <th class="d-none d-sm-table-cell">Email</th>
                         <th class="d-none d-sm-table-cell">Phone</th>
-                        <th class="d-none d-lg-table-cell" style="width: 15%;">Access</th>
+                        <th class="d-none d-sm-table-cell">JoinTime</th>
+                        <th class="d-none d-lg-table-cell" style="width: 15%;">Status</th>
                         <th class="text-center" style="width: 80px;">Actions</th>
                     </tr>
                 </thead>
                 <tbody>
+                    @{
+                        int index = 1;
+                    }
                     @foreach (var item in Model)
                     {
                         <tr>
-                            <td class="d-none d-sm-table-cell text-center">1</td>
+                            <td class="d-none d-sm-table-cell text-center">@index</td>
                             <td class="text-center">
                                 <img class="img-avatar img-avatar48" src="@Html.DisplayFor(modelItem => item.ProfileImageUrl)" alt="">
                             </td>
@@ -70,8 +74,11 @@
                             <td class="d-none d-sm-table-cell">
                                 @Html.DisplayFor(modelItem => item.PhoneNumber)
                             </td>
+                            <td class="d-none d-sm-table-cell">
+                                @Html.DisplayFor(modelItem => item.JoinTime)
+                            </td>
                             <td class="d-none d-lg-table-cell">
-                                <span class="badge bg-info">Business</span>
+                                <span class="badge bg-danger">Disable</span>
                             </td>
                             <td class="text-center">
                                 <div class="btn-group">
@@ -84,6 +91,7 @@
                                 </div>
                             </td>
                         </tr>
+                        index++;
                     }
                 </tbody>
             </table>
@@ -91,8 +99,91 @@
     </div>
 </div>
 
+<div class="modal fade" id="modal-customer" tabindex="-1" role="dialog" aria-labelledby="modal-customer"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="block block-rounded block-themed block-transparent mb-0">
+                <div class="block-header bg-primary-dark">
+                    <h3 class="block-title">Add customer</h3>
+                    <div class="block-options">
+                        <button type="button" class="btn-block-option" data-bs-dismiss="modal" aria-label="Close">
+                            <i class="fa fa-fw fa-times"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="block-content">
+                    <form novalidate="novalidate" onsubmit="return false;" class="tab-pane active form-add-user"
+                          id="btabs-static-home" role="tabpanel" aria-labelledby="btabs-static-home-tab" tabindex="0">
+                        <div class="mb-4">
+                            <label for="UserName" class="form-label">Name</label>
+                            <input type="text" class="form-control form-control-alt" name="UserName" id="UserName"
+                                   placeholder="Please enter name...">
+                        </div>
+                        <div class="mb-4">
+                            <label for="Email" class="form-label">Email</label>
+                            <input type="email" class="form-control form-control-alt" name="Email" id="Email"
+                                   placeholder="Please enter email...">
+                        </div>
+                        <div class="mb-4">
+                            <label for="PhoneNumber" class="form-label">Phone</label>
+                            <input type="email" class="form-control form-control-alt" name="PhoneNumber" id="PhoneNumber"
+                                   placeholder="Please enter phone...">
+                        </div>
+                        <div class="mb-4">
+                            <label for="BirthDay" class="form-label">BirthDay</label>
+                            <input type="text" class="js-flatpickr form-control form-control-alt" id="BirthDay"
+                                   name="BirthDay" placeholder="Please enter birthday...">
+                        </div>
+                        <div class="mb-4">
+                            <label for="Password" class="form-label">Password</label>
+                            <input type="password" class="form-control form-control-alt" name="password"
+                                   id="password" placeholder="Please enter password...">
+                        </div>
+                        <div class="mb-4 d-flex gap-4">
+                            <label for="gender-male" class="form-label">Gender</label>
+                            <div class="space-x-2">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="gender-male" name="user_gender"
+                                           value="1">
+                                    <label class="form-check-label" for="gender-male">Male</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="gender-female" name="user_gender"
+                                           value="0">
+                                    <label class="form-check-label" for="gender-female">Female</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-center gap-5">
+                            <label for="user_status" class="form-label">Status</label>
+                            <div class="form-check form-switch">
+                                <input class="form-check-input" type="checkbox" id="user_status">
+                                <label class="form-check-label" for="user_status"></label>
+                            </div>
+                        </div>
+                        <div class="block-content block-content-full text-end">
+                            <button type="button" class="btn btn-sm btn-alt-secondary me-1"
+                                    data-bs-dismiss="modal">
+                                Exit
+                            </button>
+                            <button type="submit" class="btn btn-sm btn-primary add-user-element"
+                                    id="btn-add-user">
+                                Add
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 @section Scripts {
     <script src="~/admin/js/plugins/sweetalert2/sweetalert2.min.js"></script>
+    <script src="~/admin/js/plugins/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
+    <script src="~/admin/js/plugins/flatpickr/flatpickr.min.js"></script>
+    <script>Dashmix.helpersOnLoad(['js-flatpickr', 'jq-datepicker']);</script>
     <script>
         $(document).on("click", ".btn-delete", async function () {
             let trid = $(this).data("id");
