--- a/Areas/Admin/Views/Products/Create.cshtml
+++ b/Areas/Admin/Views/Products/Create.cshtml
@@ -57,7 +57,7 @@
                     <form action="be_forms_plugins.html" method="POST" onsubmit="return false;">
                         <div class="mb-4">
                             <label class="form-label" for="color-id">Color</label>
-                            <select class="js-select2 form-select" id="color-id" name="color-id" style="width: 100%;" data-container="#modal-block-select2" data-placeholder="Choose one..">
+                            <select class="js-select2 form-select" id="color-id" name="color-id" style="width: 100%;" data-placeholder="Choose one..">
                                 <option></option>
                                 @foreach (var color in ViewBag.Colors)
                                 {
@@ -67,10 +67,10 @@
                         </div>
                         <div class="mb-4">
                             <label class="form-label" for="size-id">Size</label>
-                            <select class="js-select2 form-select" id="size-id" name="size-id" style="width: 100%;" data-container="#modal-block-select2" data-placeholder="Choose many.." multiple>
+                            <select class="js-select2 form-select" id="size-id" name="size-id" style="width: 100%;" data-placeholder="Choose many.." disabled multiple>
                                 <option></option>
-                                <option value="1" selected>HTML</option>
-                                <option value="2" selected>CSS</option>
+                                <option value="1" >HTML</option>
+                                <option value="2" >CSS</option>
                                 <option value="3">JavaScript</option>
                                 <option value="4">PHP</option>
                                 <option value="5">MySQL</option>
@@ -123,7 +123,7 @@
                         </div>
                         <div class="mb-4">
                             <label class="form-label" for="category-id">Category</label>
-                            <select class="js-select2 form-select" id="category-id" name="category-id" style="width: 100%;" data-placeholder="Choose one..">
+                            <select class="js-select2 form-select" id="category-id" name="category-id" style="width: 100%;" data-placeholder="Choose category..">
                                 <option></option>
                                 @foreach (var brand in ViewBag.Categories)
                                 {
