--- a/Areas/Admin/Views/Products/Create.cshtml
+++ b/Areas/Admin/Views/Products/Create.cshtml
@@ -50,47 +50,85 @@
                 <div class="block-header block-header-default">
                     <h3 class="block-title">Variant</h3>
                     <div class="block-options">
-                        <button type="button" class="btn btn-alt-primary btn-sm btn-hero" ><i class="fa-regular fa-plus"></i> Add</button>
-                    </div>
-                </div>
-                <div class="block-content block-content-full">
-                    <form action="be_forms_plugins.html" method="POST" onsubmit="return false;">
-                        <div class="mb-4">
-                            <label class="form-label" for="color-id">Color</label>
-                            <select class="js-select2 form-select" id="color-id" name="color-id" style="width: 100%;" data-placeholder="Choose one..">
-                                <option></option>
-                                @foreach (var color in ViewBag.Colors)
-                                {
-                                    <option value="@color.Id">@color.Name</option>
-                                }
-                            </select>
-                        </div>
-                        <div class="mb-4">
-                            <label class="form-label" for="size-id">Size</label>
-                            <select class="js-select2 form-select" id="size-id" name="size-id" style="width: 100%;" data-placeholder="Choose many.." disabled multiple>
-                                <option></option>
-                                <option value="1" >HTML</option>
-                                <option value="2" >CSS</option>
-                                <option value="3">JavaScript</option>
-                                <option value="4">PHP</option>
-                                <option value="5">MySQL</option>
-                                <option value="6">Ruby</option>
-                                <option value="7">Angular</option>
-                                <option value="8">React</option>
-                                <option value="9">Vue.js</option>
-                            </select>
-                        </div>
-                        <div class="mb-4">
-                            <div class="upload-image-container">
-                                <input type="file" name="upload-image" class="upload-image-input" hidden multiple />
-                                <div class="no-image">
-                                    <p>Select files to upload</p>
-                                </div>
-                                <div class="has-image">
+                        <button type="button" class="btn btn-alt-primary btn-sm btn-hero" data-bs-toggle="modal" data-bs-target="#modal-block-select2"><i class="fa-regular fa-plus"></i> Add</button>
+                        <div class="modal" id="modal-block-select2" tabindex="-1" role="dialog" aria-labelledby="modal-block-select2" aria-hidden="true">
+                            <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document">
+                                <div class="modal-content">
+                                    <div class="model-header block-header block-header-default">
+                                        <h3 class="block-title">Select2 in a modal</h3>
+                                        <div class="block-options">
+                                            <button type="button" class="btn-block-option" data-bs-dismiss="modal" aria-label="Close">
+                                                <i class="fa fa-fw fa-times"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <div class="modal-body block block-rounded block-transparent mb-0">
+                                        <div class="block-content">
+                                            <form action="be_forms_plugins.html" method="POST" onsubmit="return false;">
+                                                <div class="mb-4">
+                                                    <label class="form-label" for="color-id">Color</label>
+                                                    <select class="js-select2 form-select" id="color-id" name="color-id" style="width: 100%;" data-container="#modal-block-select2" data-placeholder="Choose one..">
+                                                        <option></option>
+                                                        @foreach (var color in ViewBag.Colors)
+                                                        {
+                                                            <option value="@color.Id">@color.Name</option>
+                                                        }
+                                                    </select>
+                                                </div>
+                                                <div class="mb-4">
+                                                    <label class="form-label" for="size-id">Size</label>
+                                                    <select class="js-select2 form-select" id="size-id" name="size-id" style="width: 100%;" data-placeholder="Choose many.." data-container="#modal-block-select2" disabled multiple>
+                                                        <option></option>
+                                                        <option value="35">35</option>
+                                                        <option value="36">36</option>
+                                                        <option value="37">37</option>
+                                                        <option value="38">38</option>
+                                                        <option value="39">39</option>
+                                                        <option value="40">40</option>
+                                                        <option value="41">41</option>
+                                                        <option value="42">42</option>
+                                                        <option value="43">43</option>
+                                                    </select>
+                                                </div>
+                                                <div class="mb-4">
+                                                    <label class="form-label" for="upload-image">Images</label>
+                                                    <div class="upload-image-container">
+                                                        <input type="file" id="upload-image" name="upload-image" class="upload-image-input" hidden multiple />
+                                                        <div class="no-image">
+                                                            <p>Select files to upload</p>
+                                                        </div>
+                                                        <div class="has-image">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <table class="table table-variant-container align-middle" style="display: none">
+                                                    <thead>
+                                                        <tr>
+                                                            <th scope="col">#</th>
+                                                            <th scope="col">Variants</th>
+                                                            <th scope="col">Stock</th>
+                                                            <th scope="col">Status</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody id="table-variant">
+                                                        
+                                                    </tbody>
+                                                </table>
+                                            </form>
+                                        </div>
+                                        
+                                    </div>
+                                    <div class="model-footer block-content block-content-full text-end bg-body">
+                                        <button type="button" class="btn btn-sm btn-alt-secondary me-1" data-bs-dismiss="modal">Close</button>
+                                        <button type="button" id="btn-add-variant" class="btn btn-sm btn-primary">Save</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </form>
+                    </div>
+                </div>
+                <div class="block-content block-content-full">
+                    
                 </div>
             </div>
             <!-- END Variant-->
