--- a/wwwroot/admin/css/custom.css
+++ b/wwwroot/admin/css/custom.css
@@ -69,6 +69,10 @@
     border-radius: 8px
 }
 
+.preview-image-item img.active{
+    border: 2px solid #0665d0
+}
+
 .preview-image-item span {
     position: absolute;
     right: 4px;
