--- a/wwwroot/admin/css/custom.css
+++ b/wwwroot/admin/css/custom.css
@@ -87,3 +87,10 @@
     background-color: rgb(0 0 0 / 40%);
     border-radius: 50%;
 }
+
+.img-variant{
+    width: 60px;
+    height: 60px;
+    border-radius: 5px;
+    object-fit: contain
+}
